--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -272,6 +272,7 @@
                     <div class="col my-auto">
                         <a href="https://www.lille.fr/" target="_blank">
                             <img src="{{ asset('assets/Logo_ville_de_Lille.png') }}"
+                                 class="img-fluid"
                                  height="180"
                                  width="160"
                                  alt="lille_logo">
@@ -280,6 +281,7 @@
                     <div class="col my-auto">
                         <a href="https://www.luc.asso.fr/" target="_blank">
                             <img src="{{ asset('assets/logo_LUClub.png') }}"
+                                 class="img-fluid"
                                  height="180"
                                  width="147"
                                  alt="logo_LUClub">
@@ -288,6 +290,7 @@
                     <div class="col my-auto">
                         <a href="https://www.ffjudo.com/" target="_blank">
                             <img src="{{ asset('assets/logo_FFJDA.png') }}"
+                                 class="img-fluid"
                                  height="180"
                                  width="120"
                                  alt="logo_FFJDA">
@@ -296,6 +299,7 @@
                     <div class="col my-auto">
                         <a href="https://www.agilim.fr/" target="_blank">
                             <img src="{{ asset('assets/logo_agilim.png') }}"
+                                 class="img-fluid"
                                  height="100"
                                  width="300"
                                  alt="logo_agilim">
@@ -304,6 +308,7 @@
                     <div class="col my-auto">
                         <a href="https://www.lillemetropole.fr/" target="_blank">
                             <img src="{{ asset('assets/logo_MEL.png') }}"
+                                 class="img-fluid"
                                  height="180"
                                  width="146"
                                  alt="logo_MEL">
