[+] update dojo template - dojo entity - update easyadmin

--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -33,6 +33,7 @@
     <div class="container-fluid">
         <div class="row text-center justify-content-center">
             <div class="col-xl my-auto">
+                <h2>SALLE DEBEYRE</h2>
                 <div class="iframe-outer">
                     <div class="iframe-inner">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.75805227567!2d3.071911315859676!3d50.63161128217546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d58cd174730f%3A0xf0f98712dd300f10!2sSports%20de%20contact%20Lille%20Etudiants%20Club!5e0!3m2!1sfr!2sfr!4v1594216294738!5m2!1sfr!2sfr"
@@ -135,6 +136,7 @@
                 </div>
             </div>
             <div class="col-xl my-auto">
+                <h2>SALLE DEFAUCOMPRET</h2>
                 <div class="iframe-outer">
                     <div class="iframe-inner">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d894.800914630943!2d3.0873630056344954!3d50.62936125849722!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d5faea376d7d%3A0x4f55bddb5cd9f71d!2sEspace%20Sportif%20Defaucompret!5e0!3m2!1sfr!2sfr!4v1595857882269!5m2!1sfr!2sfr"
