--- a/templates/boutique/index.html.twig
+++ b/templates/boutique/index.html.twig
@@ -9,10 +9,12 @@
         </div>
         <div class="row text-center justify-content-center">
             {% for boutique in boutiques %}
-                <div class="col-lg-4">
-                    <img class="img-fluid img-thumbnail"
-                         src="{{ asset('uploads/boutique/') }}{{ boutique.image }}"
-                         alt="">
+                <div class="col-lg-4 col-md-4">
+                    <a href="{{ asset('uploads/boutique/') }}{{ boutique.image }}" data-toggle="lightbox">
+                        <img class="img-fluid img-thumbnail"
+                             src="{{ asset('uploads/boutique/') }}{{ boutique.image }}"
+                             alt="">
+                    </a>
                     <p><strong>{{ boutique.objet }}</strong></p>
                     <p>
                         {{ boutique.prix }}€
@@ -30,4 +32,13 @@
             {% endfor %}
         </div>
     </div>
+{% endblock %}
+{% block javascripts %}
+    <script>
+        $(document).on('click', '[data-toggle="lightbox"]', function(event) {
+            event.preventDefault();
+            $(this).ekkoLightbox();
+        });
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
 {% endblock %}
