[~] responsive on <ul class='nav nav-tabs'>

--- a/templates/club/histoire.html.twig
+++ b/templates/club/histoire.html.twig
@@ -201,7 +201,7 @@
 {% endblock %}
 {% block body %}
     <div class="container">
-        <ul class="nav nav-tabs"  id="histoireTab" role="tablist">
+        <ul class="nav nav-tabs flex-column flex-lg-row" id="histoireTab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="historiqueClub-tab" data-toggle="tab" href="#historiqueClub" aria-controls="historiqueClub" aria-selected="true">Historique du Club</a>
             </li>
