--- a/templates/documents/index.html.twig
+++ b/templates/documents/index.html.twig
@@ -7,7 +7,7 @@
 
 {% block body %}
     <div class="container">
-        <ul class="nav nav-tabs" id="documentsTab" role="tablist">
+        <ul class="nav nav-tabs flex-column flex-lg-row" id="documentsTab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="grades-tab" data-toggle="tab" href="#grades" aria-controls="grades" aria-selected="true">Passages des grades</a>
             </li>
@@ -21,7 +21,7 @@
         <div class="tab-content" id="documentsTabContent">
             <div id="grades" class="tab-pane fade show active" role="tabpanel" aria-labelledby="grades-tab">
                 <h3>Passages des grades</h3>
-                <ul class="nav nav-tabs" id="gradesTab" role="tablist">
+                <ul class="nav nav-tabs flex-column flex-lg-row" id="gradesTab" role="tablist">
                     <li class="nav-item">
                         <a class="nav-link active" id="fiches-tab" data-toggle="tab" href="#fiches" aria-controls="fiches" aria-selected="true">Fiches Techniques</a>
                     </li>
