--- a/templates/club/dojo.html.twig
+++ b/templates/club/dojo.html.twig
@@ -26,7 +26,7 @@
 
 {% block body %}
     <div class="container">
-        <ul class="nav nav-tabs" id="dojoTab" role="tablist">
+        <ul class="nav nav-tabs flex-column flex-lg-row" id="dojoTab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="miniPoussins-tab" data-toggle="tab" href="#miniPoussins" aria-controls="miniPoussins" aria-selected="true">Mini-Poussins</a>
             </li>
