--- a/templates/disciplines/taiso.html.twig
+++ b/templates/disciplines/taiso.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="container">
-        <ul class="nav nav-tabs" id="taisoTab" role="tablist">
+        <ul class="nav nav-tabs flex-column flex-lg-row" id="taisoTab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="histoireValeurs-tab" data-toggle="tab" href="#histoireValeurs" aria-controls="histoireValeurs" aria-selected="true">Histoire et Valeurs</a>
             </li>
