--- a/templates/inscription/adhesion.html.twig
+++ b/templates/inscription/adhesion.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="container">
-        <ul class="nav nav-tabs" id="adhesionTab" role="tablist">
+        <ul class="nav nav-tabs flex-column flex-lg-row" id="adhesionTab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="judo-tab" data-toggle="tab" href="#judo" aria-controls="judo" aria-selected="true">Judo</a>
             </li>
