--- a/templates/inscription/competitions.html.twig
+++ b/templates/inscription/competitions.html.twig
@@ -4,6 +4,11 @@
 
 {% block body %}
     <div class="container">
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success">
+                {{ message }}
+            </div>
+        {% endfor %}
         <ul class="nav nav-tabs" id="competitionsTab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="judo-tab" data-toggle="tab" href="#judo" aria-controls="judo" aria-selected="true">Judo</a>
@@ -21,15 +26,59 @@
         <div class="tab-content" id="competitionsTabContent">
             <div id="judo" class="tab-pane fade show active" role="tabpanel" aria-labelledby="judo-tab">
                 <h3>Compétitions Judo</h3>
+                <ul>
+                    {% for competition in competitionsJudo %}
+                        <li>
+                            {{ competition.lieu }}, {{ competition.date|date('d/m/Y') }}: <a href="{{ path('competitions_inscriptions', {'id': competition.id}) }}">S'inscrire</a>
+                        </li>
+                    {% else %}
+                        <li>
+                            Pas de compétitions actuellement
+                        </li>
+                    {% endfor %}
+                </ul>
             </div>
             <div id="jujitsu" class="tab-pane fade" role="tabpanel" aria-labelledby="jujitsu-tab">
                 <h3>Compétitions Ju Jitsu</h3>
+                <ul>
+                    {% for competition in competitionsJuJitsu %}
+                        <li>
+                            {{ competition.lieu }}, {{ competition.date|date('d/m/Y') }}: <a href="{{ path('competitions_inscriptions', {'id': competition.id}) }}">S'inscrire</a>
+                        </li>
+                    {% else %}
+                        <li>
+                            Pas de compétitions actuellement
+                        </li>
+                    {% endfor %}
+                </ul>
             </div>
             <div id="taiso" class="tab-pane fade" role="tabpanel" aria-labelledby="taiso-tab">
                 <h3>Compétitions Taiso</h3>
+                <ul>
+                    {% for competition in competitionsTaiso %}
+                        <li>
+                            {{ competition.lieu }}, {{ competition.date|date('d/m/Y') }}: <a href="{{ path('competitions_inscriptions', {'id': competition.id}) }}">S'inscrire</a>
+                        </li>
+                    {% else %}
+                        <li>
+                            Pas de compétitions actuellement
+                        </li>
+                    {% endfor %}
+                </ul>
             </div>
             <div id="newaza" class="tab-pane fade" role="tabpanel" aria-labelledby="newaza-tab">
                 <h3>Compétitions Ne Waza</h3>
+                <ul>
+                    {% for competition in competitionsNeWaza %}
+                        <li>
+                            {{ competition.lieu }}, {{ competition.date|date('d/m/Y') }}: <a href="{{ path('competitions_inscriptions', {'id': competition.id}) }}">S'inscrire</a>
+                        </li>
+                    {% else %}
+                        <li>
+                            Pas de compétitions actuellement
+                        </li>
+                    {% endfor %}
+                </ul>
             </div>
         </div>
     </div>
