[-] remove post entity

--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -56,11 +56,11 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             {% if first.image %}
-                                <a href="{{ path('newsletter_show', {'id': first.id}) }}">
+                                <a href="{{ path('actualites-club_show', {'id': first.id}) }}">
                                     <img class="img-fluid d-block w-100" src="{{ asset('uploads/post/') }}{{ first.image }}" alt="">
                                 </a>
                             {% else %}
-                                <a href="{{ path('newsletter_show', {'id': first.id}) }}">
+                                <a href="{{ path('actualites-club_show', {'id': first.id}) }}">
                                     <img class="img-fluid d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
                                 </a>
                             {% endif %}
@@ -70,11 +70,11 @@
                         </div>
                         <div class="carousel-item">
                             {% if second.image %}
-                                <a href="{{ path('newsletter_show', {'id': second.id}) }}">
+                                <a href="{{ path('actualites-club_show', {'id': second.id}) }}">
                                     <img class="img-fluid d-block w-100" src="{{ asset('uploads/post/') }}{{ second.image }}" alt="">
                                 </a>
                             {% else %}
-                                <a href="{{ path('newsletter_show', {'id': second.id}) }}">
+                                <a href="{{ path('actualites-club_show', {'id': second.id}) }}">
                                     <img class="img-fluid d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
                                 </a>
                             {% endif %}
@@ -84,11 +84,11 @@
                         </div>
                         <div class="carousel-item">
                             {% if third.image %}
-                                <a href="{{ path('newsletter_show', {'id': third.id}) }}">
+                                <a href="{{ path('actualites-club_show', {'id': third.id}) }}">
                                     <img class="img-fluid d-block w-100" src="{{ asset('uploads/post/') }}{{ third.image }}" alt="">
                                 </a>
                             {% else %}
-                                <a href="{{ path('newsletter_show', {'id': third.id}) }}">
+                                <a href="{{ path('actualites-club_show', {'id': third.id}) }}">
                                     <img class="img-fluid d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
                                 </a>
                             {% endif %}
@@ -98,11 +98,11 @@
                         </div>
                         <div class="carousel-item">
                             {% if fourth.image %}
-                                <a href="{{ path('newsletter_show', {'id': fourth.id}) }}">
+                                <a href="{{ path('actualites-club_show', {'id': fourth.id}) }}">
                                     <img class="img-fluid d-block w-100" src="{{ asset('uploads/post/') }}{{ fourth.image }}" alt="">
                                 </a>
                             {% else %}
-                                <a href="{{ path('newsletter_show', {'id': fourth.id}) }}">
+                                <a href="{{ path('actualites-club_show', {'id': fourth.id}) }}">
                                     <img class="img-fluid d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
                                 </a>
                             {% endif %}
@@ -112,11 +112,11 @@
                         </div>
                         <div class="carousel-item">
                             {% if fifth.image %}
-                                <a href="{{ path('newsletter_show', {'id': fifth.id}) }}">
+                                <a href="{{ path('actualites-club_show', {'id': fifth.id}) }}">
                                     <img class="img-fluid d-block w-100" src="{{ asset('uploads/post/') }}{{ fifth.image }}" alt="">
                                 </a>
                             {% else %}
-                                <a href="{{ path('newsletter_show', {'id': fifth.id}) }}">
+                                <a href="{{ path('actualites-club_show', {'id': fifth.id}) }}">
                                     <img class="img-fluid d-block w-100" src="https://dummyimage.com/600x400/8f8f8f/fff" alt="">
                                 </a>
                             {% endif %}
