--- a/templates/actualites/actualites-nationale-internationale-show.html.twig
+++ b/templates/actualites/actualites-nationale-internationale-show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Newsletter - Lille Judo{% endblock %}
+{% block title %}Actualités - Lille Judo{% endblock %}
 
 {% block body %}
     <div class="container">
